Fixed: wflow-consoleweb - Property Editor - Icons of repeater row property type is miss-aligned in IE. @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
+++ b/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
@@ -697,6 +697,7 @@ td.error .chosen-container, td.error input {
 .repeater-row .actions > a, .repeater-row .actions > i {
     position: absolute; 
     top:50%;
+    left:50%;
     transform: translate(-50%, -50%);
     color: #888;
 }
